# tree-sitter-pbat

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pbat.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pbat/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPbat/: pbat.h
bindings/swift/TreeSitterPbatTests/: TreeSitterPbatTests.swift
src/: grammar.json  node-types.json  parser.c
